# Mini_Toolkit

./: CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_COPYRIGHT.txt  main.qml  resource.qrc
res/: background.psd
src/: main.cpp
src/component/: Clicker.cpp  Clicker.h  DataModel.cpp  DataModel.h  Launcher.cpp  Launcher.h  RandintGenerator.cpp  RandintGenerator.h
